{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 129,
  "lineage": "4353e2e7-372b-f695-0216-e42287761ea0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "lb-address-iac",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.246.60.195",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-17T04:36:15.240-07:00",
            "id": "projects/yassir-devops-lab/regions/europe-west2/addresses/lb-address-iac",
            "name": "lb-address-iac",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "yassir-devops-lab",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/regions/europe-west2/addresses/lb-address-iac"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "hicham-iac-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-17T04:36:59.596-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/yassir-devops-lab/global/firewalls/hicham-iac-firewall",
            "log_config": [],
            "name": "hicham-iac-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "priority": 1000,
            "project": "yassir-devops-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/firewalls/hicham-iac-firewall",
            "source_ranges": [
              "10.1.0.0/16",
              "35.246.60.195"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.lb-address-iac",
            "google_compute_network.vpc-hicham-iac",
            "google_compute_subnetwork.subnet-hicham-iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "hicham-iac-firewall-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-17T05:55:15.310-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/yassir-devops-lab/global/firewalls/hicham-iac-firewall-outbound",
            "log_config": [],
            "name": "hicham-iac-firewall-outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "priority": 1000,
            "project": "yassir-devops-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/firewalls/hicham-iac-firewall-outbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-hicham-iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-hicham-iac",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "mtu": 0,
            "name": "vpc-hicham-iac",
            "project": "yassir-devops-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "hicham-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-17T05:58:53.037-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/yassir-devops-lab/regions/europe-west2/routers/hicham-router",
            "name": "hicham-router",
            "network": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "project": "yassir-devops-lab",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/regions/europe-west2/routers/hicham-router"
          },
          "dependencies": [
            "google_compute_network.vpc-hicham-iac",
            "google_compute_subnetwork.subnet-hicham-iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "hicham-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "yassir-devops-lab/europe-west2/hicham-router/hicham-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "hicham-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "yassir-devops-lab",
            "region": "europe-west2",
            "router": "hicham-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-hicham-iac",
            "google_compute_router.hicham-router",
            "google_compute_subnetwork.subnet-hicham-iac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-hicham-iac",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-17T04:36:27.437-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/yassir-devops-lab/regions/europe-west2/subnetworks/subnet-hicham-iac",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "subnet-hicham-iac",
            "network": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "yassir-devops-lab",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.76.0.0/20",
                "range_name": "gke-hicham-gke-iac-services-e663e154"
              },
              {
                "ip_cidr_range": "10.72.0.0/14",
                "range_name": "gke-hicham-gke-iac-pods-e663e154"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/regions/europe-west2/subnetworks/subnet-hicham-iac",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-hicham-iac"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iap_bastion.module.iap_tunneling",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_from_iap_to_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-17T04:36:26.703-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/yassir-devops-lab/global/firewalls/allow-ssh-from-iap-to-tunnel",
            "log_config": [],
            "name": "allow-ssh-from-iap-to-tunnel",
            "network": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/networks/vpc-hicham-iac",
            "priority": 1000,
            "project": "yassir-devops-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/yassir-devops-lab/global/firewalls/allow-ssh-from-iap-to-tunnel",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "bastion@yassir-devops-lab.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-hicham-iac",
            "module.iap_bastion.google_service_account.bastion_host"
          ]
        }
      ]
    }
  ]
}